# ci-study

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  test.sh
.github/workflows/: ci.yml
sparta/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
sunset_ninja/: asgi.py  settings.py  urls.py  wsgi.py
sunset_ninja/tests/: test_view.py
tabom/migrations/: 0001_initial.py
tabom/models/: like.py
tabom/services/: like_service.py
tabom/tests/: test_like_service.py
