[tool.poetry]
name = "my-ninja"
version = "0.1.0"
description = ""
authors = ["sunset"]
readme = "README.md"
packages = [{include = "my_ninja"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
django-ninja = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
