[tool.poetry]
name = "my-ninja"
version = "0.1.0"
description = ""
authors = ["minkkky"]
readme = "README.md"
packages = [{include = "sparta"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
django-ninja = "^0.19.1"
black = "^22.8.0"
mypy = "^0.982"
django-stubs = "^1.12.0"
#pytest-django = "^4.5.2"
isort = "^5.10.1"
PyMySQL = "^1.0.2"
types-PyMySQL = "^1.0.19"
cryptography = "^38.0.1"


[tool.black]
line-length = 120


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.9
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "sunset_ninja.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
